@@ -53,6 +53,13 @@ class TestTags(unittest.TestCase,
         result = self.get_content().tags
         self.assertEqual(['t1'], [x.code for x in result])
 
+    def test_set_should_update_pinned_tags(self):
+        tags = self.setup_tags('t1', 't2')
+        t1 = tags['t1']
+        t1.pinned = True
+        with mock.patch.object(tags, 'set_pinned') as set_pinned:
+            self.get_content().tags = [t1, tags['t2']]
+            set_pinned.assert_called_with(['t1'])
 
 
 class TestCMSContentWiring(zeit.cms.testing.BrowserTestCase):
